--- a/src/Components/Home/Header/header.css
+++ b/src/Components/Home/Header/header.css
@@ -165,3 +165,25 @@ li {
     display: flex;
   }
 }
+/* headroom */
+.headroom {
+  top: 0;
+  left: 0;
+  right: 0;
+  zindex: 1;
+}
+.headroom--unfixed {
+  position: relative;
+  transform: translateY(0);
+}
+.headroom--scrolled {
+  transition: transform 200ms ease-in-out;
+}
+.headroom--unpinned {
+  position: fixed;
+  transform: translateY(-100%);
+}
+.headroom--pinned {
+  position: fixed;
+  transform: translateY(0%);
+}
